test/arrays/diten/forallArrayTypeVar.good
forallArrayTypeVar.chpl:1: error: syntax error near ';'
