test/arrays/diten/forallArrayTypeVar.chpl
type t = [i in 1..5] 0;
